# nereid

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: codspeed.yml  release.yml
benches/: flow.rs  load.rs  ops.rs  parse.rs  render.rs  scenario.rs  seq.rs  store.rs
benches/fixtures/: mod.rs  render-quality-v2-corpus-manifest.md
benches/profiler/: mod.rs
benchmarks/: flamegraph_to_csv.py  run_profiles.sh  run_profiles_all.sh
benchmarks/profiles/: flow.layout__large_long_labels.nodes.csv  flow.layout__large_long_labels.top.json  flow.layout__medium_dense.nodes.csv  flow.layout__medium_dense.top.json  flow.layout__small.nodes.csv  flow.layout__small.top.json  flow.nodes.csv  flow.route__large_long_labels.nodes.csv  flow.route__large_long_labels.top.json  flow.route__medium_dense.nodes.csv  flow.route__medium_dense.top.json  flow.route__routing_stress.nodes.csv  flow.route__routing_stress.top.json  flow.route__small.nodes.csv  flow.route__small.top.json  flow.top.json  ops.apply__flow_batch_10.nodes.csv  ops.apply__flow_batch_10.top.json  ops.apply__flow_batch_200.nodes.csv  ops.apply__flow_batch_200.top.json  ops.apply__flow_single.nodes.csv  ops.apply__flow_single.top.json  render.nodes.csv  (+37 more)
docs/: ascii-mermaid-agent-summary.md  audit.md  feedback.md  hasdhas.md  mermaid_ascii_report.md  mm-as.md  old-man-and-the-sea.txt  protocol-01.md
scripts/: bench-criterion  bench-criterion.md  package-release.ps1  package-release.sh
specs/: _handoff.md  index.md
src/: lib.rs  main.rs  ui.rs
tests/: mermaid_ascii_readme.rs
(+236 files in other folders)
