[package]
name = "nereid"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.70"
description = "Terminal-first diagram TUI and MCP server for Mermaid-backed sessions"
readme = "README.md"
homepage = "https://github.com/bnomei/nereid"
repository = "https://github.com/bnomei/nereid"
documentation = "https://docs.rs/nereid"
keywords = ["mcp", "tui", "diagram", "mermaid", "ascii"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".DS_Store", "specs/**"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
itoa = "1.0.17"
memchr = "2.8.0"
smallvec = "1.15.1"
smol_str = "0.3.5"
rayon = "1"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
rmcp = { version = "0.16", features = ["transport-streamable-http-server"] }
tokio = { version = "1", features = ["io-std", "macros", "rt", "sync", "time"] }
regex = "1"
axum = "0.8"
base64 = "0.22"
rapidfuzz = "0.5"

[dev-dependencies]
criterion = { version = "4.3.0", package = "codspeed-criterion-compat" }
rstest = "0.26"

[[bench]]
name = "flow"
harness = false

[[bench]]
name = "seq"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "store"
harness = false

[[bench]]
name = "scenario"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "load"
harness = false
